--- a/organizacoes/templates/organizacoes/documento_view.html
+++ b/organizacoes/templates/organizacoes/documento_view.html
@@ -29,7 +29,7 @@
     <select id="projeto" name="projeto" class="form-control">
       <option selected value> -- nenhum projeto -- </option>
       {% for projeto in projetos %}
-        <option value="{{projeto.id}}">{{projeto.get_titulo}} [{{projeto.ano}}.{{projeto.semestre}}]{% if projeto.avancado %} {Avançado}{% endif %}</option>
+        <option value="{{projeto.id}}">{{projeto.get_titulo|slice:":90"}} [{{projeto.ano}}.{{projeto.semestre}}]{% if projeto.avancado %} {Avançado}{% endif %}</option>
       {% endfor %}
     </select>
 
