--- a/templates/impressora.html
+++ b/templates/impressora.html
@@ -16,7 +16,7 @@
     }
 </style>
 
-<div class="logo_impressoras" style="float: right; margin-top: 4px">
+<div class="logo_impressoras" style="float: right; margin-top: 4px; margin-left: 8px">
     <img class="logo_impressora" id="impressora" src="{% static 'images/icone_Printer.png' %}" alt="impressora" style="cursor: pointer;">
 </div>
 
@@ -30,6 +30,7 @@
         $(".imprimir").addClass('desligado');
         $('.esconder').hide()
         $('.email').hide()
+        $('.images').hide()
     });
 
     $(document).keyup(function(e) {
@@ -40,6 +41,7 @@
             $(".imprimir").removeClass('desligado');
             $('.esconder').show()
             $('.email').show()
+            $('.images').show()
         }
     });
 
